fix: colors for dark mode

--- a/fr-wiktionary/JS-CSS/Mediawiki/wikt.add-examples.css
+++ b/fr-wiktionary/JS-CSS/Mediawiki/wikt.add-examples.css
@@ -17,3 +17,19 @@
   /*background-image: url("blob:https://fr.wiktionary.org/3c6884e3-da84-48d1-aabb-3d15ae4e5192");*/
   background-image: url("data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2220%22 height=%2220%22 viewBox=%220 0 20 20%22%3E%3Ctitle%3E italic %3C/title%3E%3Cpath d=%22m5 19 .33-1.51 2.17-.66 2.9-13.66-1.9-.63L9 1h7l-.71 1.6-2.29.57-2.83 13.66 2.14.66L12 19z%22/%3E%3C/svg%3E");
 }
+
+.new-example {
+  background: lightgreen;
+}
+
+@media screen {
+  html.skin-theme-clientpref-night .new-example {
+    background: #388c38;
+  }
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  html.skin-theme-clientpref-os .new-example {
+    background: #388c38;
+  }
+}
